bind "s-w" to workgroups2 prefix

--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,7 @@ share/
 packages/lunar-mode-line/
 chinese-fonts-setup/
 anaconda-mode/
-workgroups
+workgroups2
 test/
 haskell-emacs-exts/
 /.mc-lists.el
